Correct CSS for group game scrollbar.

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -95,7 +95,11 @@ span.corneralt_tr {background:url(../images/orange_tr.png) no-repeat; top:0;righ
 #divFrontLeft, #divFrontRight {width:44%; float:left; text-align:left;
 	margin-top:2.2em;background:#fafafa;padding:2%;min-height:220px;}
 #divFrontLeft {margin-right:1%;}	
+
+/* MPS commented out, not sure what it's meant to be part of?
 	background:url(../images/group.png) no-repeat 0 6px;}
+*/
+
 #divFrontRight {margin-left:3%;}
 #divFrontRight h3 {padding-bottom:0;margin-bottom:0; padding-left:64px;
 	background:url(../images/globe.png) no-repeat 0 6px;}
@@ -315,7 +319,7 @@ hr {margin:0 3%; border:none!important;border-color:white!important; border-top:
 .accesskey {text-decoration:underline;}
 
 /* Game */
-#divGameGroupText {overflow-y:scroll; background:#fafafa; border: solid 1px #808080;
+#divGameGroupText {overflow:auto; background:#fafafa; border: solid 1px #808080;
         height:200px; padding:3px; font-family:monospace; font-size:1.2em;}
 #divGameDetail {display:none;}
 #txtGameDetail {width:98%; height:150px;}
